# ValoTracker

./: .gitignore  CONTRIBUTING.md  Cargo.toml  DISCLAIMER.md  LICENSE  README.md  TERMS_OF_SERVICE.md
.github/: release_template.md
.github/workflows/: ci.yml  release.yml
audits/: complexity-audit.md
crates/valotracker-core/: Cargo.toml
crates/valotracker-core/src/: agents.rs  auth.rs  client.rs  config.rs  coregame.rs  discord.rs  engine.rs  error.rs  history.rs  lib.rs  lockfile.rs  names.rs  notifications.rs  party.rs  pregame.rs  presence.rs  rank.rs  stats.rs  updater.rs  websocket.rs
crates/valotracker-core/src/models/: match_data.rs  mod.rs
crates/valotracker-gui/: Cargo.toml  build.rs
crates/valotracker-gui/src/: app.rs  colors.rs  main.rs  startup.rs
crates/valotracker-gui/src/views/: encounter.rs  history.rs  idle.rs  match_view.rs  mod.rs  settings.rs  topbar.rs
crates/valotracker-installer/: Cargo.toml
crates/valotracker-installer/src/: lib.rs
crates/valotracker-installer/wix/: License.rtf  main.wxs
crates/valotracker-py/: Cargo.toml  README.md  pyproject.toml
crates/valotracker-py/src/: lib.rs
crates/valotracker-tui/: Cargo.toml
crates/valotracker-tui/src/: app.rs  events.rs  main.rs
crates/valotracker-tui/src/ui/: colors.rs  config_view.rs  encounter_view.rs  header.rs  history_view.rs  mod.rs  table.rs
crates/vt-core/: Cargo.toml
crates/vt-core/src/: auth.rs  client.rs  config.rs  coregame.rs  engine.rs  error.rs  history.rs  lib.rs  lockfile.rs  names.rs  party.rs  pregame.rs  presence.rs  rank.rs  state.rs  stats.rs  websocket.rs
crates/vt-core/src/models/: mod.rs  player.rs
crates/vt-gui/: Cargo.toml
crates/vt-gui/src/: app.rs  main.rs
crates/vt-py/: Cargo.toml  pyproject.toml
crates/vt-py/src/: lib.rs
crates/vt-tui/: Cargo.toml
crates/vt-tui/src/: app.rs  events.rs
crates/vt-tui/src/ui/: colors.rs  encounter_view.rs  header.rs  history_view.rs  mod.rs  table.rs
installer/: LICENSE.txt  ValoTracker.iss
python/: MANIFEST.in  README.md  pyproject.toml
python/tests/: test_basic.py
python/valotracker/: __init__.py  __main__.py  client.py  launcher.py  models.py
python/vt/: __init__.py  client.py  models.py
scoop/: valotracker.json
wiki/: Configuration.md  FAQ-Troubleshooting.md  Home.md  Installation-and-Setup.md
