[workspace]
resolver = "2"
members = [
    "crates/vt-core",
    "crates/vt-tui",
    "crates/vt-gui",
    "crates/vt-py",
]

[workspace.dependencies]
tokio       = { version = "1", features = ["full"] }
serde       = { version = "1", features = ["derive"] }
serde_json  = "1"
reqwest     = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
thiserror   = "1"
anyhow      = "1"
base64      = "0.22"
tracing     = "0.1"
