[workspace]
resolver = "2"
members = [
    "crates/valotracker-core",
    "crates/valotracker-tui",
    "crates/valotracker-gui",
    "crates/valotracker-py",
    "crates/valotracker-installer",
]

[workspace.dependencies]
tokio       = { version = "1", features = ["full"] }
serde       = { version = "1", features = ["derive"] }
serde_json  = "1"
reqwest     = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
thiserror   = "1"
anyhow      = "1"
base64      = "0.22"
tracing     = "0.1"
sha2        = "0.10"
