[package]
name = "valotracker-core"
version = "1.0.0"
edition = "2021"
description = "Valorant match tracker - core engine"

[dependencies]
tokio             = { workspace = true }
serde             = { workspace = true }
serde_json        = { workspace = true }
reqwest           = { workspace = true }
thiserror         = { workspace = true }
base64            = { workspace = true }
tracing           = { workspace = true }
tokio-tungstenite = { version = "0.23", features = ["rustls-tls-webpki-roots"] }
rustls            = { version = "0.23", features = ["ring"] }
toml              = "0.8"
dirs              = "5"
futures           = "0.3"
rusqlite          = { version = "0.31", features = ["bundled"] }
