[package]
name = "valotracker-core"
version = "3.0.0"
edition = "2021"
description = "Valorant match tracker - core engine"

[features]
discord = ["dep:discord-presence"]

[dependencies]
tokio             = { workspace = true }
serde             = { workspace = true }
serde_json        = { workspace = true }
reqwest           = { workspace = true, features = ["blocking"] }
thiserror         = { workspace = true }
base64            = { workspace = true }
tracing           = { workspace = true }
sha2              = { workspace = true }
tokio-tungstenite = { version = "0.23", features = ["rustls-tls-webpki-roots"] }
rustls            = { version = "0.23", features = ["ring"] }
toml              = "0.8"
dirs              = "5"
futures           = "0.3"
rusqlite          = { version = "0.31", features = ["bundled"] }
discord-presence  = { version = "^3", optional = true }

[target.'cfg(target_os = "windows")'.dependencies]
windows-sys        = { version = "0.59", features = ["Win32_Storage_FileSystem"] }
winrt-notification = "0.5"
