[package]
name = "valotracker-gui"
version = "1.0.1"
edition = "2021"
description = "Valorant match tracker - egui desktop GUI"

[[bin]]
name = "valotracker-gui"
path = "src/main.rs"

[features]
default = []
gui = ["dep:eframe", "dep:egui", "dep:tray-icon", "dep:winreg"]

[build-dependencies]
winresource = "0.1"

[dependencies]
valotracker-core = { path = "../valotracker-core" }
tokio      = { workspace = true }
anyhow     = { workspace = true }
eframe     = { version = "0.28", optional = true }
egui       = { version = "0.28", optional = true }
tray-icon  = { version = "0.17", optional = true }
winreg     = { version = "0.52", optional = true }
