[package]
name = "valotracker-py"
version = "1.0.0"
edition = "2021"
description = "Valorant match tracker — Python bindings"

[lib]
name = "_valotracker"
crate-type = ["cdylib"]

[dependencies]
valotracker-core  = { path = "../valotracker-core" }
pyo3     = { version = "0.22", features = ["extension-module"] }
tokio    = { workspace = true }
