[package]
name = "valotracker-py"
version = "1.0.1"
edition = "2021"
description = "Valorant match tracker — Python bindings"

[lib]
name = "_valotracker"
crate-type = ["cdylib"]

[dependencies]
valotracker-core  = { path = "../valotracker-core" }
pyo3     = { version = "0.23", features = ["extension-module"] }
tokio    = { workspace = true }
