[package]
name = "vt-py"
version = "0.1.0"
edition = "2021"
description = "Valorant match tracker — Python bindings"

[lib]
name = "vt"
crate-type = ["cdylib"]

[dependencies]
vt-core  = { path = "../vt-core" }
pyo3     = { version = "0.22", features = ["extension-module"] }
tokio    = { workspace = true }
